# plugin_connect_ex

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/plugin_connect_ex/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  PCSCLib.cpp  PCSCLib.h  cpp_code.cpp  head.h
app/src/main/java/com/example/plugin_connect_ex/: MainActivity.java  MiddleWare.java
app/src/main/plugin_test/: CMakeLists.txt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/plugin_connect_ex/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
